--- a/portfolio.html
+++ b/portfolio.html
@@ -4,25 +4,45 @@
     <title>About Me</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
 <!--nav bar-->
-<nav>   
+<div class="nav">
+    <!--Name heading on navbar-->
+    <h1 class="navbarname">Elena Baurkot</h1>   
+    <!--Navbar links-->
     <ul>
-        <li id="name">Elena Baurkot</li>
         <li><a href="index.html">About</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
-</nav>
+</div>
 
 <!--page content-->
 <div class="container">
     <h1>Portfolio</h1>
-    <img src="https://via.placeholder.com/150C/O https://placeholder.com/" alt="no image">
-    <img src="https://via.placeholder.com/150C/O https://placeholder.com/" alt="no image">
-    <img src="https://via.placeholder.com/150C/O https://placeholder.com/" alt="no image">
-    <img src="https://via.placeholder.com/150C/O https://placeholder.com/" alt="no image">
-    <img src="https://via.placeholder.com/150C/O https://placeholder.com/" alt="no image">
+    <!--5 images for sample work-->
+    <div class="image">
+        <img src="assets/images/img1.jpeg" alt="no image">
+        <div class="text">Sample Work</div>
+    </div>
+    <div class="image">
+        <img src="assets/images/img2.jpeg" alt="no image">
+        <div class="text">Sample Work</div>
+    </div>
+    <div class="image">
+        <img src="assets/images/img3.jpeg" alt="no image">
+        <div class="text">Sample Work</div>
+    </div>
+    <div class="image">
+        <img src="assets/images/img4.jpeg" alt="no image">
+        <div class="text">Sample Work</div>
+    </div>
+    <div class="image">
+        <img src="assets/images/img5.jpeg" alt="no image">
+        <div class="text">Sample Work</div>
+    </div>
+
 </div>
 
 </body>
