navbar links inline, floated right, text centered over images on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,18 +9,16 @@
 <!--nav bar-->
 <div class="nav">
     <!--Name heading on navbar-->
-    <h1 class="navbarname">Elena Baurkot</h1>   
+    <h2 class="navbarname">Elena Baurkot</h2> 
     <!--Navbar links-->
-    <ul>
-        <li><a href="index.html">About</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
+    <a href="index.html">About</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="contact.html">Contact<a>
 </div>
 
 <!--page content-->
 <div class="container">
-    <h1>Portfolio</h1>
+    <h2>Portfolio</h2>
     <!--5 images for sample work-->
     <div class="image">
         <img src="assets/images/img1.jpeg" alt="no image">
@@ -42,7 +40,6 @@
         <img src="assets/images/img5.jpeg" alt="no image">
         <div class="text">Sample Work</div>
     </div>
-
 </div>
 
 </body>
