--- a/contact.html
+++ b/contact.html
@@ -9,18 +9,16 @@
 <!--nav bar-->
 <div class="nav">
     <!--Name heading on navbar-->
-    <h1 class="navbarname">Elena Baurkot</h1>   
+    <h2 class="navbarname">Elena Baurkot</h2> 
     <!--Navbar links-->
-    <ul>
-        <li><a href="index.html">About</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
+    <a href="index.html">About</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="contact.html">Contact<a>
 </div>
 
 <!--page content-->
 <div class="container">
-    <h1>Contact</h1>
+    <h2>Contact</h2>
     <form action="contactform">
         <label for="name">Name</label>
         <input type="text" id="name" name="name" placeholder="John Smith">
