--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
 <!--nav bar-->
 <div class="nav">
     <!--Name heading on navbar-->
-    <h1 class="navbarname">Elena Baurkot</h1>   
+    <h2 class="navbarname">Elena Baurkot</h2> 
     <!--Navbar links-->
-    <ul>
-        <li><a href="index.html">About</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
+    <a href="index.html">About</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="contact.html">Contact<a>
 </div>
 
 <!--page content-->
 <div class="container">
     <section id="content">
-        <h1>About Me</h1>
+        <h2>About Me</h2>
         <!--Profile image-->
         <img src="assets/images/profilephoto.jpg" alt="no photo">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eaque provident suscipit asperiores placeat possimus repellat magni, eos atque iure quisquam perspiciatis saepe facere repudiandae minus. Ducimus, fugiat dignissimos praesentium modi ad similique pariatur saepe voluptatibus beatae perferendis in doloremque aliquid quod assumenda atque nisi delectus nemo optio accusamus omnis!</p>
