container and navbar centered

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 <body>
 <!--nav bar-->
 <div class="nav">
+    <div class="container">
     <!--Name heading on navbar-->
     <h2 class="navbarname">Elena Baurkot</h2> 
     <!--Navbar links-->
     <a href="index.html">About</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="contact.html">Contact<a>
+    </div>
 </div>
 
 <!--page content-->
@@ -21,10 +23,12 @@
     <section id="content">
         <h2>About Me</h2>
         <!--Profile image-->
-        <img src="assets/images/profilephoto.jpg" alt="no photo">
+        <img id="profilepic" src="assets/images/profilephoto.jpg" alt="no photo">
+        <!--About me text-->
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eaque provident suscipit asperiores placeat possimus repellat magni, eos atque iure quisquam perspiciatis saepe facere repudiandae minus. Ducimus, fugiat dignissimos praesentium modi ad similique pariatur saepe voluptatibus beatae perferendis in doloremque aliquid quod assumenda atque nisi delectus nemo optio accusamus omnis!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ratione facilis laudantium a, earum aliquid rerum dolorum quas ullam dolor?</p>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum laboriosam atque provident perferendis, debitis quo consequatur unde architecto ut facilis quae odio sed tempore maiores ipsam culpa soluta dicta facere.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio eveniet aliquid magni autem, laborum voluptatibus ipsa quasi amet nesciunt, architecto cupiditate provident doloremque assumenda corrupti. Totam iusto ducimus veniam officia doloribus laboriosam aut reprehenderit! Blanditiis voluptate assumenda quo itaque deleniti veniam, officia tempore. Numquam ipsa vel vitae, nisi non aut officia, assumenda sed rem eum beatae, aliquid incidunt optio voluptates nobis atque doloribus quod pariatur deserunt molestias quasi ipsam! Voluptas, quia? Deserunt optio exercitationem quibusdam consectetur tenetur quasi doloribus ut voluptatem eius mollitia, in adipisci quo voluptatibus eveniet aliquid error ad, vero quos eaque non sint maiores nulla. Veniam, perspiciatis.</p>
     </section>
 </div>
 
