--- a/portfolio.html
+++ b/portfolio.html
@@ -8,12 +8,14 @@
 <body>
 <!--nav bar-->
 <div class="nav">
+    <div class="container">
     <!--Name heading on navbar-->
     <h2 class="navbarname">Elena Baurkot</h2> 
     <!--Navbar links-->
     <a href="index.html">About</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="contact.html">Contact<a>
+    </div>
 </div>
 
 <!--page content-->
