--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,14 @@
 <head>
     <title>About Me</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <!--background image works when I put it in the style here in HTML, but when I add it to CSS page it doesn't work-->
+    <style>
+        body {
+            background-image: url(assets/images/background.png);
+        }
+    </style>
 </head>
+
 
 <body>
 <!--nav bar-->
@@ -21,15 +28,20 @@
 <!--page content-->
 <div class="container">
     <h2>Contact</h2>
+<!--contact form-->
     <form action="contactform">
         <label for="name">Name</label>
+            <br>
         <input type="text" id="name" name="name" placeholder="John Smith">
-    
+            <br>
         <label for="email">Email</label>
+            <br>
         <input type="text" id="email" name="email" placeholder="example@gmail.com">
-
+            <br>
         <label for="message">Message</label>
+            <br>
         <textarea id="text" name="message" style="height:200px"></textarea>
+            <br>
 <!--might need to link submit button to something?-->
         <input type="submit" value="Submit">
     </form>
