--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 <head>
     <title>About Me</title>
     <link rel="stylesheet" href="assets/css/style.css">
+<!--background image works when I put it in the style here in HTML, but when I add it to CSS page it doesn't work-->
+    <style>
+        body {
+            background-image: url(assets/images/background.png);
+        }
+    </style>
 </head>
+
 
 <body>
 <!--nav bar-->
 <div class="nav">
-    <div class="container">
+    <div class="navcontainer">
     <!--Name heading on navbar-->
     <h2 class="navbarname">Elena Baurkot</h2> 
     <!--Navbar links-->
