--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,14 @@
 <head>
     <title>About Me</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <!--background image works when I put it in the style here in HTML, but when I add it to CSS page it doesn't work-->
+    <style>
+        body {
+            background-image: url(assets/images/background.png);
+        }
+    </style>
+</head>
+
 </head>
 
 <body>
