--- a/contact.html
+++ b/contact.html
@@ -15,11 +15,11 @@
 <body>
 <!--nav bar-->
 <div class="nav">
-    <div class="container">
+    <div class="navcontainer">
     <!--Name heading on navbar-->
     <h2 class="navbarname">Elena Baurkot</h2> 
     <!--Navbar links-->
-    <a href="contact.html">Contact<a>
+    <a href="contact.html">Contact</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="index.html">About</a>
     </div>
@@ -27,9 +27,10 @@
 
 <!--page content-->
 <div class="container">
-    <h2>Contact</h2>
+<section class="content">
 <!--contact form-->
     <form action="contactform">
+        <h2>Contact</h2>
         <label for="name">Name</label>
             <br>
         <input type="text" id="name" name="name" placeholder="John Smith">
@@ -45,6 +46,7 @@
 <!--might need to link submit button to something?-->
         <input type="submit" value="Submit">
     </form>
+</section>
 </div>
 
 </body>
