--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>About Me</title>
     <link rel="stylesheet" href="assets/css/style.css">
 <!--background image works when I put it in the style here in HTML, but when I add it to CSS page it doesn't work-->
-    <style>
+   <style>
         body {
             background-image: url(assets/images/background.png);
         }
@@ -19,7 +19,7 @@
     <!--Name heading on navbar-->
     <h2 class="navbarname">Elena Baurkot</h2> 
     <!--Navbar links-->
-    <a href="contact.html">Contact<a>
+    <a href="contact.html">Contact</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="index.html">About</a>
     </div>
@@ -27,7 +27,7 @@
 
 <!--page content-->
 <div class="container">
-    <section id="content">
+    <section class="content">
         <h2>About Me</h2>
         <!--Profile image-->
         <img id="profilepic" src="assets/images/profilephoto.jpg" alt="no photo">
