--- a/portfolio.html
+++ b/portfolio.html
@@ -16,11 +16,11 @@
 <body>
 <!--nav bar-->
 <div class="nav">
-    <div class="container">
+    <div class="navcontainer">
     <!--Name heading on navbar-->
     <h2 class="navbarname">Elena Baurkot</h2> 
     <!--Navbar links-->
-    <a href="contact.html">Contact<a>
+    <a href="contact.html">Contact</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="index.html">About</a>
     </div>
@@ -28,6 +28,7 @@
 
 <!--page content-->
 <div class="container">
+<section class="content">
     <h2>Portfolio</h2>
     <!--5 images for sample work-->
     <div class="image">
@@ -50,6 +51,7 @@
         <img src="assets/images/img5.jpeg" alt="no image">
         <div class="text">Sample Work</div>
     </div>
+</section>
 </div>
 
 </body>
