portfolio background height fixed to contain all sample work images

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
 
 <!--page content-->
 <div class="container">
-<section class="content">
+<section class="contentportfolio">
     <h2>Portfolio</h2>
     <!--5 images for sample work-->
     <div class="image">
