background-image on CSS page working

--- a/index.html
+++ b/index.html
@@ -3,12 +3,6 @@
 <head>
     <title>About Me</title>
     <link rel="stylesheet" href="assets/css/style.css">
-<!--background image works when I put it in the style here in HTML, but when I add it to CSS page it doesn't work-->
-   <style>
-        body {
-            background-image: url(assets/images/background.png);
-        }
-    </style>
 </head>
 
 
@@ -19,7 +13,7 @@
     <!--Name heading on navbar-->
     <h2 class="navbarname">Elena Baurkot</h2> 
     <!--Navbar links-->
-    <a href="contact.html">Contact</a>
+    <a id="contact" href="contact.html">Contact</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="index.html">About</a>
     </div>
